# GSI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: gen_data_csv.py  test_model.py  train_baseline.py  train_model.py
src/: baseline_model.py  custom_dataset.py  trainer.py
src/gsi/dataset/: butterfly_dataset.py
src/gsi/inference/: metrics.py  tester.py
src/gsi/models/: baseline_model.py  extended_baseline_model.py  vgg19.py
src/gsi/train/: trainer.py
